--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap');
 .parallax {
   background-image: url("https://i.imgur.com/HCqH3iQ.png");
   min-height: 500px; 
@@ -5,4 +7,85 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.large{
+  width: 100%;
+}
+.AboutUsheader{
+  font-size:36px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;  
+}
+.paragraph{
+  background-color:#5A849C;
+    height:500px;
+    font-size:24px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;  
+}
+.ABOUTUSCONT{
+  background-color:#5A849C;
+}
+.AboutUs{
+  font-size:24px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;  
+  font-size: 50px;
+}
+.mr-2{
+  height:60px;
+}
+.App{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: #000;  
+}
+.MeettheTeam{
+  background-color:#6BA637;
+}
+.team{
+  background-color:#6BA637;
+  height:450px;
+  font-size:24px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;  
+}
+.FooterButton{
+  justify-content: center;
+  align-content: center;
+  display: flex;
+}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+    
+
+.fa-facebook {
+opacity: 0.7;
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.copyright{
+  text-align: center
 }
