--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 .twoparallax {
   background-image: url("https://i.imgur.com/Nra1AaV.png");
   min-height: 500px; 
+  height: 100%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -39,6 +40,20 @@
   font-family: 'Lato', sans-serif;
   font-weight: 400;  
   font-size: 50px;
+  padding: 0;
+}
+.garbage{
+  margin-left: auto;
+  margin-right: auto;
+  width: 8em
+}
+.team{
+  background-color:#6BA637;
+  font-size:24px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;  
+  font-size: 50px;
+  padding: 0;
 }
 .mr-2{
   height:60px;
@@ -53,7 +68,7 @@
 }
 .team{
   background-color:#6BA637;
-  height:450px;
+
   font-size:24px;
   font-family: 'Lato', sans-serif;
   font-weight: 400;  
@@ -66,17 +81,15 @@
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 50px;
+  width: 100%;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
 }
     
+.footer{
+  word-spacing: 30px;
 
-.fa-facebook {
-opacity: 0.7;
-  background: #3B5998;
-  color: white;
 }
 
 .fa-twitter {
