--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,8 @@
   font-family: 'Lato', sans-serif;
   font-weight: 400;  
   font-size: 50px;
-  padding: 0;
+  padding: 5px;
+  
 }
 .garbage{
   margin-left: auto;
